--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,10 +10,25 @@
 
 
 // Custom definitions may go here
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url = 'https://www.matthewo.tech/maven/'
+        }
+    }
+
+    dependencies {
+        classpath 'org.team11260:fast-load-plugin:0.1.1'
+    }
+
+}
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'org.team11260.fast-load-plugin'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -25,5 +40,13 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'androidx.core:core-ktx:+'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'org.team11260:fast-load:0.1.1'
+}
+
+repositories {
+    maven {
+        url = 'https://www.matthewo.tech/maven/'
+    }
 }
