--- a/build.common.gradle
+++ b/build.common.gradle
@@ -93,6 +93,7 @@ android {
             signingConfig signingConfigs.release
 
             ndk {
+                //noinspection ChromeOsAbiSupport
                 abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
@@ -100,6 +101,7 @@ android {
             debuggable true
             jniDebuggable true
             ndk {
+                //noinspection ChromeOsAbiSupport
                 abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
@@ -110,9 +112,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    packagingOptions {
-        pickFirst '**/*.so'
-    }
     sourceSets.main {
         jni.srcDirs = []
         jniLibs.srcDir rootProject.file('libs')
