added empty tensorflow class in java

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -36,6 +36,9 @@ android {
     packagingOptions {
         jniLibs.useLegacyPackaging true
     }
+    androidResources {
+        noCompress 'tflite'
+    }
 }
 
 dependencies {
