--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,21 +13,21 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven {
-            url = 'https://www.matthewo.tech/maven/'
-        }
+//        maven {
+//            url = 'https://www.matthewo.tech/maven/'
+//        }
     }
 
-    dependencies {
-        classpath 'org.team11260:fast-load-plugin:0.1.1'
-    }
+//    dependencies {
+//        classpath 'org.team11260:fast-load-plugin:0.1.1'
+//    }
 
 }
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
-apply plugin: 'org.team11260.fast-load-plugin'
+//apply plugin: 'org.team11260.fast-load-plugin'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
@@ -41,10 +41,10 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-    implementation 'org.team11260:fast-load:0.1.1'
-    implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+//    implementation 'org.team11260:fast-load:0.1.1'
+//    implementation 'org.apache.commons:commons-math3:3.6.1'
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+//    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 }
 
 repositories {
